ci-cd/gitlab-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
spec:
  selector:
    app: gitlab
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30443 
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 22
      nodePort: 30222
