ci-cd/harbor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-core
spec:
  selector:
    app: harbor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: harbor-registry
spec:
  selector:
    app: harbor
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: harbor-db
spec:
  selector:
    app: harbor
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5433
