ci-cd/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30000
    name: http
  - protocol: TCP
    port: 50000
    targetPort: 50000
    nodePort: 30001
    name: jnlp
