ci-cd/nexus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
spec:
  type: NodePort
  ports:
    - name: nexus
      port: 8081         # Nexus 웹 UI 포트
      targetPort: 8081
      protocol: TCP
      nodePort: 31001  
    - name: nexus-http   
      port: 5000
      targetPort: 5000
      protocol: TCP
      nodePort: 31002   
    - name: nexus-https 
      port: 5001
      targetPort: 5001
      protocol: TCP
      nodePort: 31003  
  selector:
    app: nexus
